# snaptron-query

./: .zenodo.json  CITATION.cff  Dockerfile  README.md  build_and_push.sh  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dist.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
requirements/: build.txt  dev.txt  docs.txt  prd.txt  test.txt
scripts/: prune_meta_data_for_testing.py
snapmine/: Chart.yaml  values.yaml  values_depl.yaml  values_prod.yaml
snapmine/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
snapmine/templates/tests/: test-connection.yaml
snaptron_query/: __init__.py
snaptron_query/app/: callback_common.py  column_defs.py  components.py  components_geq.py  components_jiq.py  components_jiq_form.py  exceptions.py  global_strings.py  graphs.py  graphs_utils.py  icons.py  inline_styles.py  layout.py  layout_geq.py  layout_jiq.py  layout_misc.py  main_dash.py  main_dash_app.py  navbars.py  paths.py  profile_timer.py  query_gene_expression.py  query_junction_inclusion.py  runner_geq.py  runner_jiq.py  snaptron_client.py  utils.py
snaptron_query/app/assets/: ag_grid.css  app_styles.css  dashAgGridComponentFunctions.js  graph_update_geq.js  update_graphs.js
snaptron_query/app/tests/: conftest.py  test_app.py  test_callbacks.py  test_callbacks_2.py  test_col_def.py  test_geq.py  test_graphs.py  test_jiq.py  test_misc.py  test_mock_botton_click_geq.py  test_mock_button_click_jiq.py  test_mock_htttpx.py  test_multi_jiq.py  test_snaptron.py  test_ui_geq.py  test_ui_jiq.py
snaptron_query/app/tests/data/: test_chr19_4491836_4493702_encode.tsv  test_chr19_4491836_4493702_gtexv2.tsv  test_chr19_4491836_4493702_tcgav2.tsv  test_chr7_98881251_98881974_srav3h.tsv  test_chr8_71666671_71671625_srav1m.tsv  test_encode_samples.tsv  test_gtexv2_samples.tsv  (+9 more)
tests/: test_util.py
