[project]
name = "snaptron_query"
dynamic = ["version"]
authors = [
    {name = "Scientifc Software Engineering Center at JHU", email = "ssec@jhu.edu"},
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.11"
dependencies = [
    "dash",
    "dash-ag-grid",
    "dash-bootstrap-components",
    "dash-bootstrap-templates",
    "dash-core-components",
    "dash-html-components",
    "dash-iconify",
    "dash-mantine-components",
    "pandas",
    "httpx",
    "matplotlib",
    "plotly",
    "plotly-express",
    "numpy",
    "dash-loading-spinners"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "build",
    "pytest",
    "pytest-cov",
    "ruff",
    "setuptools>=61.2",
    "setuptools_scm[toml]>=8.0",
    "tox"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_book_theme",
    "sphinx-automodapi",
    "sphinx-issues",
    "nbsphinx"
]

[project.urls]
homepage = "https://github.com/ssec-jhu/snaptron-query"
documentation = "https://github.com/ssec-jhu/snaptron-query"
repository = "https://github.com/ssec-jhu/snaptron-query"

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["snaptron_query"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "snaptron_query/_version.py"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "venv",
    "_version.py"
]

ignore = [
]

target-version = "py311"
